# aaaaaaaaaaaaaaaaa

./: README.md
ex4/: CMakeLists.txt  main.cpp
ex5/: CMakeLists.txt
ex5/src/: CMakeLists.txt  data.cpp  data.h  main.cpp
ex5/test/: CMakeLists.txt  test.cpp
ex6/: CMakeLists.txt
ex6/src/: CMakeLists.txt  main.cpp  text.txt
ex7/: CMakeLists.txt  fun.cpp  fun.h  main.cpp
ex7/test/: CMakeLists.txt  tests.cpp
za_ex1_i_ex2/: main.cpp
za_ex3/: main.cpp  sqrt.cpp  sqrt.h
